--- a/puzzle.html
+++ b/puzzle.html
@@ -13,22 +13,22 @@
 
 					<div class="row0">
 				<div class="pink0 center">
-					<img src="images/turret.png" class="restrict pointer" onclick="nextImage4(this)">
+					<img src="turret.png" class="restrict pointer" onclick="nextImage4(this)">
 				</img>
 				</div>
 				<div class="pink1 center">
-					<img src="images/gun.png" class="restrict pointer" onclick="nextImage5(this)">
+					<img src="gun.png" class="restrict pointer" onclick="nextImage5(this)">
 				</img>
 				</div>
 			</div>
 
 				<div class="row1">
 				<div class="pink2 center">
-					<img src="images/turret2.png" class="restrict pointer" onclick="nextImage6(this)">
+					<img src="turret2.png" class="restrict pointer" onclick="nextImage6(this)">
 				</img>
 				</div>
 				<div class="pink3 center">
-					<img src="images/cube.png" class="restrict pointer" onclick="nextImage7(this)">
+					<img src="cube.png" class="restrict pointer" onclick="nextImage7(this)">
 				</img>
 				</div>
 			</div>
@@ -38,15 +38,15 @@
 
 			<div class="lgreen">
 				<div class="purple0 center">
-					<img src="images/one.png" class="restrict pointer" onclick="nextImage(this)">
+					<img src="one.png" class="restrict pointer" onclick="nextImage(this)">
 					<img>
 				</div>
 				<div class="purple1 center">
-					<img src="images/two.png" class="restrict pointer" onclick="nextImage2(this)">
+					<img src="two.png" class="restrict pointer" onclick="nextImage2(this)">
 					<img>
 				</div>
 				<div class="purple2 center">
-					<img src="images/three.png" class="restrict pointer" onclick="nextImage3(this)">
+					<img src="three.png" class="restrict pointer" onclick="nextImage3(this)">
 					<img>
 				</div>
 		</div>
